--- a/buttons.css
+++ b/buttons.css
@@ -9,6 +9,6 @@
 #bluecamo {
     background-color: blue;
     border-radius: 100%;
-    height: 5%;
-    width: 5%;
+    height: 20px;
+    width: 20px;
 }
